# akn-profiler

./: .gitignore  .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TESTING.md  esbuild.mjs  language-configuration.json  package-lock.json  package.json  tsconfig.json
client/: package-lock.json  package.json  tsconfig.json
client/src/: extension.ts
server/: pyproject.toml
server/akn_profiler/: __init__.py  __main__.py  server.py
server/akn_profiler/models/: __init__.py  cascade.py  generator.py  profile.py  snippet_generator.py
server/akn_profiler/validation/: __init__.py  engine.py  errors.py  rules_choice.py  rules_datatype.py  rules_identity.py  rules_strictness.py  rules_structure.py  rules_vocabulary.py  yaml_context.py  yaml_parser.py
server/akn_profiler/xsd/: __init__.py  choice_parser.py  generated.py  schema_loader.py
server/tests/: __init__.py  test_cascade.py  test_code_actions_add.py  test_code_lens.py  test_completion.py  test_engine.py  test_generator.py  test_identity_attrs.py  test_ordering.py  test_placeholder.py  test_rules_choice.py  test_rules_datatype.py  test_rules_identity.py  test_rules_strictness.py  test_rules_structure.py  test_rules_vocabulary.py  test_schema_loader.py  test_semantic_tokens.py  test_snippet_generator.py  test_yaml_context.py  test_yaml_parser.py
syntaxes/: akn-profile.tmLanguage.json
